--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,6 +22,15 @@
     width: 150px;
 }
 
+.rightColumnColor {
+    padding: 10px;
+    text-align: center;
+    background-color: #1d1d3a;
+    border-radius: 5px;
+    margin-top: 20px;
+    height: 300px;
+}
+
 .chart {
     margin-left: auto;
     margin-right: auto;
