--- a/src/components/ComponentQuantityItems/ComponentQuantityItems.module.css
+++ b/src/components/ComponentQuantityItems/ComponentQuantityItems.module.css
@@ -1,21 +1,34 @@
 .root {
-    color: #fff
+  color: #fff;
+  margin-left: 20px;
 }
 
-.title {    
-    font-size: 22px;
-    line-height: 25px;
+.title {
+  font-size: 22px;
+  line-height: 25px;
 }
 
 .row {
-    display: flex;
-    margin-bottom: 10px;
+  display: flex;
+  margin-bottom: 10px;
+  position: relative;
 }
 
 .rowTitle {
-    width: 56%;
+  width: 56%;
 }
 
 .value {
-    width: 22%;
+  width: 22%;
+}
+
+.dot {
+  position: absolute;
+  top: 50%;
+  left: -10px;
+  transform: translate(-50%, -50%);
+  width: 5px;
+  height: 5px;
+  background-color: red;
+  border-radius: 50%;
 }
